# FeatureCraft

./: .gitignore  .pypirc.example  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  test_ai_features_simple.py  test_explainability_ieee.py
.github/workflows/: security.yml
docs/: AGENT_GUIDE.md  AGENT_IMPLEMENTATION_SUMMARY.md  advanced-features.md  ai-integration.md  ai-powered-feature-engineering.md  api-reference.md  benchmarks.md  cli-reference.md  configuration.md  feature-engineering-techniques.md  featurecraft-agent-design.md  getting-started.md  optimization-guide.md  troubleshooting.md
examples/: 01_quickstart.py  02_kaggle_benchmark.py  03_complex_kaggle_benchmark.py  04_tuned_complex_benchmark.py  05_ai_powered_features.py  06_explainability_demo.py  07_text_nlp_demo.py  08_feature_interactions_demo.py  download_complex_datasets.py  download_kaggle_datasets.py  feature_flow.py
src/featurecraft/: __init__.py  aggregations.py  cli.py  clustering.py  config.py  domain.py  drift.py  encoders.py  exceptions.py  explainability.py  imbalance.py  imputers.py  insights.py  interactions.py  interactive.py  io.py  logging.py  pipeline.py  plots.py  reducers.py  registry.py  report.py  scalers.py  selection.py  settings.py  shap_utils.py  statistical.py  text.py  time_series.py  transformers.py  types.py  validators.py  version.py
src/featurecraft/agent/: __init__.py  agent.py  composer.py  config.py  evaluator.py  inspector.py  optimizer.py  reporter.py  strategist.py  types.py
src/featurecraft/ai/: __init__.py  ablation.py  advisor.py  executor.py  optimizer.py  phase2_sdk.py  planner.py  providers.py  pruning.py  schemas.py  telemetry.py  validator.py
src/featurecraft/ai/executors/: __init__.py  pandas_executor.py  ray_executor.py  spark_executor.py
src/featurecraft/ai/rag/: __init__.py  chunker.py  embedder.py  index.py  loader.py  retriever.py
src/featurecraft/utils/: __init__.py  leakage.py
src/featurecraft/validation/: __init__.py  schema_validator.py
templates/: report.html.j2
test_outputs/: ai_feature_plan.json  feature_analysis.json
